--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -1,5 +1,5 @@
 .search {
-  max-width: 275px;
+  max-width: 248px;
   display: flex;
   flex-direction: column;
   margin-top: 20px;
@@ -9,6 +9,8 @@
   height: 18px;
   padding: 2px 5px;
   outline: none;
+  border: 1px solid darkblue;
+  border-radius: 3px;
 }
 
 .input:focus {
